--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cloud-browser-server"]
 	path = cloud-browser-server
 	url = git@git.woa.com:harlowli/cloud-browser-server.git
+[submodule "cloud-browser-mcp"]
+	path = cloud-browser-mcp
+	url = git@git.woa.com:harlowli/cloud-browser-mcp.git
