feat: add MAX_BROWSERS and BROWSER_TIMEOUT env vars, update submodules

--- a/deploy/.env-template
+++ b/deploy/.env-template
@@ -1,6 +1,8 @@
 # browser-manager-server
 BROWSER_MANAGER_HOST=127.0.0.1
 BROWSER_MANAGER_PORT=5000
+MAX_BROWSERS=10
+BROWSER_TIMEOUT=1800000
 
 # cloud-browser-server
 CLOUD_BROWSER_SERVER_HOST=127.0.0.1
