--- a/deploy/.env-template
+++ b/deploy/.env-template
@@ -9,6 +9,8 @@ CLOUD_BROWSER_SERVER_HOST=127.0.0.1
 CLOUD_BROWSER_SERVER_PORT=4000
 BROWSER_ENDPOINT_HOST=127.0.0.1
 BROWSER_ENDPOINT_PORT=5000
+SCREENCAST_QUALITY=60
+SCREENCAST_EVERY_NTH_FRAME=3
 
 # cloud-browser-sdk
 CLOUD_BROWSER_SDK_HOST=127.0.0.1
