--- a/browser-manager-server/package.json
+++ b/browser-manager-server/package.json
@@ -12,17 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/http-proxy": "^1.17.17",
-    "@types/ws": "^8.18.1",
     "http-proxy": "^1.18.1",
     "koa": "^2.15.0",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "puppeteer": "^24.36.1",
-    "winston": "^3.19.0",
-    "ws": "^8.19.0"
+    "winston": "^3.19.0"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.17",
+    "@types/ws": "^8.18.1",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
