refactor: 移除页面级ws代理，优化构建流程
- browser-manager-server: 移除页面级别ws代理（/page/{targetId}），现使用flatten模式多路复用
- 三个项目.gitignore添加package-lock.json忽略
- Dockerfile改用npm install替代npm ci，只复制package.json
- 删除远程仓库中的package-lock.json文件

--- a/cloud-browser-sdk/Dockerfile
+++ b/cloud-browser-sdk/Dockerfile
@@ -10,11 +10,11 @@ ARG VITE_API_BASE_URL=http://localhost:4000
 ENV VITE_SDK_SERVER_URL=${VITE_SDK_SERVER_URL}
 ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
 
-# 复制 package 文件
-COPY package*.json ./
+# 复制 package.json
+COPY package.json ./
 
 # 安装所有依赖（包括 devDependencies，用于构建）
-RUN npm ci
+RUN npm install
 
 # 复制源码
 COPY . .
