--- a/browser-manager-server/package.json
+++ b/browser-manager-server/package.json
@@ -16,7 +16,7 @@
     "koa": "^2.15.0",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
-    "puppeteer": "^24.36.1",
+    "puppeteer-core": "^24.36.1",
     "winston": "^3.19.0"
   },
   "devDependencies": {
