--- a/cloud-browser-sdk/package.json
+++ b/cloud-browser-sdk/package.json
@@ -32,6 +32,7 @@
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.13.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "vite": "^5.3.4",
